--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.7.1",
     "gatsby": "^2.0.0",
+    "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-nprogress": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-styled-components": "^3.0.0",
     "nprogress": "^0.2.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-dom-confetti": "^0.0.10",
     "react-helmet": "^5.2.0",
     "react-spring": "^5.8.0"
   },
